include precise numbers for gene trees
 - Calculate permissive gene tree as well (FPKM ≥ 5)
 - Make sure to add back in the human name for humans even if there
   isn't a human species

--- a/data/.gitignore
+++ b/data/.gitignore
@@ -14,6 +14,7 @@ ensembl_orthologs
 hugo_nomenclature
 placenta_core_transcriptome
 placenta_core_tree_transcriptome
+placenta_core_tree_transcriptome_permissive
 placenta_core_transcriptome_complete
 placenta_core_transcriptome_alignment
 placenta_go_results_??
